# snapchange

./: .gitignore  Cargo.toml  flake.nix
docker/: Dockerfile.base_fuzzer  Dockerfile.snapshot  Makefile  curl.flake.nix
docker/coverage_scripts/: ghidra_script_bb_worker.py
docker/install/: 0001-Snapchange-patches.patch  qemu.sh
docker/utils/: build.sh  go.sh  snapshot.sh
examples/: init_ami.sh  install_ghidra.sh  install_prereqs.sh  test.include.sh  test.sh
examples/01_getpid/: .gitignore  Dockerfile  Makefile  make_snapshot.sh  reset.sh  run.sh
examples/01_getpid/dockers/: Dockerfile.snapshot  (+1 more)
examples/02_libtiff/: make_snapshot.sh  reset.sh  run.sh  test.sh
examples/02_libtiff_no_patch/: Cargo.toml  Makefile  reset.sh  run.sh
examples/03_ffmpeg_custom_mutator/: make_snapshot.sh  reset.sh  run.sh  test.sh
examples/04_syscall_fuzzer/: make_snapshot.sh  reset.sh  run.sh
examples/05_redqueen/: Dockerfile.snapshot  Makefile  make_snapshot.sh  reset.sh
examples/06_custom_feedback/: Dockerfile
examples/07_libfuzzer/: Cargo.toml  Dockerfile  Makefile  config.toml  make_example.sh  reset.sh
examples/09_gits_2014_ti1337/: .gdb_history  Cargo.toml  Dockerfile.snapshot  Makefile  triage.sh
examples/09_gits_2014_ti1337/src/: fuzzer.rs  main.rs
src/: addrs.rs  cmdline.rs  cmp_analysis.rs  feedback.rs  filesystem.rs  fuzz_input.rs  fuzzvm.rs  lib.rs  memory.rs  network.rs  stats.rs  virtual_snapshot.rs
src/commands/: corpus_min.rs  find_input.rs  fuzz.rs  project.rs  trace.rs
src/fuzzer/: fuzzer.rs  mod.rs  net_file_fuzzer.rs
utils/: test_ghidra.sh
(+13 files in other folders)
